<resources>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login_teacher">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="literature">Literature</string>
    <string name="geography">Geography</string>
    <string name="math">Math</string>
    <string name="finish">Finish</string>
    <string name="next">NEXT</string>
    <string name="enter_answer">Enter Answer</string>
    <string name="final_result">Final Result</string>
    <string name="subject">Subject :</string>
    <string name="correct">Correct :</string>
    <string name="incorrect">Incorrect :</string>
    <string name="earned">Earned :</string>
    <string name="total_questions">Total Questions :</string>
    <string name="overall_points">Overall Points :</string>
    <string name="math_quiz">Math Quiz</string>
    <string name="literature_quiz">Literature Quiz</string>
    <string name="geography_quiz">Geography Quiz</string>
    <string name="date">Date :</string>
    <string name="start_again">Start Again!</string>
    <string name="rules_description">
        The Quiz will contain 3 randomized questions.\n
        Every correct answer scores you 5 points.\n
        If you are not prepared , first go through the STUDY MATERIALS.
    </string>
    <string name="idioms">
        An idiom is an expression or a phrase whose meaning cannot be easily understood\n
        from the individual meanings of the words it contains. Idioms play an important part in\n
        the language as they make language richer.
    </string>
    <string name="metaphor">
        A metaphor is said to be a comparison in which one thing\n
        is said to be another\n
        Example:She is a walking dictionary\n
    </string>
</resources>